<resources>
    <string name="app_name">WachaDoin</string>
    <string name="app_caption">WachaDoin?</string>

    <string name="file_provider_authority" translatable="false">ca.turbobutterfly.wachadoin.fileprovider</string>

    <string name="title_activity_viewLog">View Log</string>
    <string name="title_activity_exportLog">Export Log</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About WachaDoin</string>

    <string name="notification_title">WachaDoin?</string>
    <string name="notification_prompt">%d minute%s</string>

    <!-- Main Page ============================================================================= -->
    <string name="main_page_sample_time">2018–06–20 12:00:00</string>
    <string name="main_page_log_prompt">Briefly describe what you have been\nworking on for the last %d minute%s.</string>
    <string name="main_page_log_since">\n(Since %s)</string>
    <string name="main_page_save_button">\nSave\n</string>

    <!-- View Log Page ========================================================================= -->
    <string name="view_page_prev_button">&lt;</string>
    <string name="view_page_range">Wednesday, September 31, 2018</string>
    <string name="view_page_next_button">&gt;</string>
    <string name="view_page_edit_start_time">Start Time</string>
    <string name="view_page_edit_end_time">End Time</string>
    <string name="view_page_edit_log_text">Log Text</string>

    <!-- Export Log Page ======================================================================= -->
    <string name="export_page_from">From</string>
    <string name="export_page_to">To</string>
    <string name="export_page_range">September 31, 2018</string>
    <string name="export_page_export_button">\nExport\n</string>
    <string name="export_page_tap">\nTap an item to change it for this time only.\n</string>
    <string name="export_page_export_in_progress">Export in Progress.</string>
    <string name="export_page_export_successful">Export Successful!</string>
    <string name="export_page_export_failed">Export Failed!</string>

    <!-- About Page ============================================================================ -->
    <string name="about_page_title">WachaDoin 2.0</string>
    <string name="about_page_turbobutterfly">TurboButterfly</string>
    <string name="about_page_developer">Copyright © 2018 Thomas Bates</string>
    <string name="about_page_email">realturbobutterfly@gmail.com</string>
    <string name="about_page_rating">\nIf you find this product useful, please provide a positive rating in the Google Play Store.\n\nThank you.\n</string>

    <!-- General Preferences =================================================================== -->
    <string name="pref_general_header">General</string>

    <string name="pref_general_auto_close_title">Auto-close on Save</string>
    <string name="pref_general_auto_close_description">
        Automatically hide the application
        when you click the Save button.
    </string>

    <!-- Display Preferences =================================================================== -->
    <string name="pref_display_header">Display</string>

    <string name="pref_display_use_reporting_period_title">Use reporting period</string>
    <string name="pref_display_reporting_period_title">Reporting period</string>
    <string name="pref_display_reporting_period_start_title">Reporting period start</string>
    <string name="pref_display_days_per_page_title">Log entries per page</string>
    <string name="pref_display_group_by_date_title">Group entries by date</string>
    <string name="pref_display_order_title">Display order</string>
    <string name="pref_display_round_title">Round times to the nearest</string>

    <!-- Notification Preferences ============================================================== -->
    <string name="pref_notifications_header">Notifications</string>

    <string name="pref_notifications_enabled_title">Enable notifications</string>
    <string name="pref_notifications_popup_app_title">Popup WachaDoin Application</string>
    <string name="pref_notifications_system_settings_title">System notification settings</string>
    <string name="pref_notifications_ringtone_title">Ringtone</string>
    <string name="pref_notifications_vibrate_title">Vibrate</string>
    <string name="pref_notifications_delay_title">Delay Time</string>
    <string name="pref_notifications_snooze_title">Snooze Time</string>

    <string name="pref_ringtone_silent">Silent</string>

    <!-- Export Preferences ==================================================================== -->
    <string name="pref_export_header">Export</string>

    <string name="pref_export_group_by_date_title">Group entries by date</string>
    <string name="pref_export_order_title">Export order</string>
    <string name="pref_export_round_title">Round times to the nearest</string>
    <string name="pref_export_format_title">File Format</string>
    <string name="pref_export_delivery_title">Delivery Method</string>
    <string name="pref_export_email_title">Email Address</string>

    <!-- Arrays for ListPreference ============================================================= -->

    <string-array name="pref_time_span_list_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_time_span_list_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="pref_reporting_period_list_entries">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="pref_days_list_entries">
        <item>1 day</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
    </string-array>
    <string-array name="pref_reporting_period_list_values">
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_order_list_entries">
        <item>Oldest to Newest</item>
        <item>Newest to Oldest</item>
    </string-array>
    <string-array name="pref_order_list_values">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="pref_format_list_entries">
        <item>Text File</item>
        <item>CSV File</item>
    </string-array>
    <string-array name="pref_format_list_values">
        <item>Text</item>
        <item>CSV</item>
    </string-array>

    <string-array name="pref_delivery_list_entries">
        <item>Send Email</item>
        <item>USB</item>
    </string-array>
    <string-array name="pref_delivery_list_values">
        <item>Email</item>
        <item>USB</item>
    </string-array>

    <!-- TurboButterfly Library ================================================================ -->

    <string name="grid_row_tag">Row</string>
    <string name="grid_column_name_tag">ColumnName</string>


</resources>
