<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ca.turbobutterfly.wachadoin.android.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_general_header" />

    <header
        android:fragment="ca.turbobutterfly.wachadoin.android.activities.SettingsActivity$DisplayPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_display_header" />

    <header
        android:fragment="ca.turbobutterfly.wachadoin.android.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_notifications_header" />

    <header
        android:fragment="ca.turbobutterfly.wachadoin.android.activities.SettingsActivity$ExportPreferenceFragment"
        android:icon="@drawable/ic_export_black_24dp"
        android:title="@string/pref_export_header" />

</preference-headers>
