<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_display_use_reporting_period"
        android:title="@string/pref_display_use_reporting_period_title"
        android:defaultValue="false" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_display_reporting_period"
        android:title="@string/pref_display_reporting_period_title"
        android:entries="@array/pref_reporting_period_list_entries"
        android:entryValues="@array/pref_reporting_period_list_values"
        android:defaultValue="7"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ca.turbobutterfly.android.preferences.DatePreference
        android:key="pref_display_reporting_period_start"
        android:title="@string/pref_display_reporting_period_start_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_display_days_per_page"
        android:title="@string/pref_display_days_per_page_title"
        android:entries="@array/pref_days_list_entries"
        android:entryValues="@array/pref_reporting_period_list_values"
        android:defaultValue="7"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="pref_display_group_by_date"
        android:title="@string/pref_display_group_by_date_title"
        android:defaultValue="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_display_order"
        android:title="@string/pref_display_order_title"
        android:entries="@array/pref_order_list_entries"
        android:entryValues="@array/pref_order_list_values"
        android:defaultValue="Ascending"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_display_round"
        android:title="@string/pref_display_round_title"
        android:entries="@array/pref_time_span_list_entries"
        android:entryValues="@array/pref_time_span_list_values"
        android:defaultValue="1"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
