<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/developerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_page_developer"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_page_email"/>

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_page_rating"/>

</LinearLayout>