<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. -->
    <SwitchPreference
        android:key="pref_notification_enabled"
        android:title="@string/pref_notifications_enabled_title"
        android:defaultValue="true" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:key="pref_notification_popup_app"
        android:title="@string/pref_notifications_popup_app_title"
        android:dependency="pref_notification_enabled"
        android:defaultValue="false" />

    <!-- This preference simply launches an intent when selected.
         Use this UI sparingly, per design guidelines. -->
    <Preference
        android:key="pref_notification_system_settings"
        android:title="@string/pref_notifications_system_settings_title">
        <!--
        <intent android:action="android.settings.ACTION_CHANNEL_NOTIFICATION_SETTINGS">
            <extra android:name="android.provider.extra.APP_PACKAGE" android:value="ca.turbobutterfly.wachadoin" />
            <extra android:name="android.provider.extra.CHANNEL_ID" android:value="ca.turbobutterfly.wachadoin.reminders.01" />
        </intent>
        -->
    </Preference>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:key="pref_notification_ringtone"
        android:title="@string/pref_notifications_ringtone_title"
        android:dependency="pref_notification_enabled"
        android:defaultValue="content://settings/system/notification_sound"
        android:ringtoneType="notification" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:key="pref_notification_vibrate"
        android:title="@string/pref_notifications_vibrate_title"
        android:dependency="pref_notification_enabled"
        android:defaultValue="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_notification_delay"
        android:title="@string/pref_notifications_delay_title"
        android:dependency="pref_notification_enabled"
        android:defaultValue="15"
        android:entries="@array/pref_time_span_list_entries"
        android:entryValues="@array/pref_time_span_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_notification_snooze"
        android:title="@string/pref_notifications_snooze_title"
        android:dependency="pref_notification_enabled"
        android:defaultValue="1"
        android:entries="@array/pref_time_span_list_entries"
        android:entryValues="@array/pref_time_span_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
