<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".android.activities.MainActivity">
    <item
        android:id="@+id/action_viewLog"
        android:orderInCategory="1"
        android:title="@string/title_activity_viewLog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editLog"
        android:orderInCategory="2"
        android:title="@string/title_activity_editLog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exportLog"
        android:orderInCategory="3"
        android:title="@string/title_activity_exportLog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="9"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
</menu>
