<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_export_group_by_date"
        android:title="@string/pref_export_group_by_date_title"
        android:defaultValue="true" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_export_order"
        android:title="@string/pref_export_order_title"
        android:entries="@array/pref_order_list_entries"
        android:entryValues="@array/pref_order_list_values"
        android:defaultValue="Ascending"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_export_snap"
        android:title="@string/pref_export_snap_title"
        android:entries="@array/pref_time_span_list_entries"
        android:entryValues="@array/pref_time_span_list_values"
        android:defaultValue="1"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_export_format"
        android:title="@string/pref_export_format_title"
        android:entries="@array/pref_format_list_entries"
        android:entryValues="@array/pref_format_list_values"
        android:defaultValue="Text"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_export_delivery"
        android:title="@string/pref_export_delivery_title"
        android:entries="@array/pref_delivery_list_entries"
        android:entryValues="@array/pref_delivery_list_values"
        android:defaultValue="Email"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="pref_export_email"
        android:title="@string/pref_export_email_title"
        android:capitalize="none"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

</PreferenceScreen>
