<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/view_page_prev_button"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/view_page_range" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/view_page_next_button"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ca.turbobutterfly.android.grid.Grid
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"/>

    </HorizontalScrollView>

</LinearLayout>